--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,10 @@ protobuf==4.24.4
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pyparsing==3.1.1
+pyTelegramBotAPI==4.14.0
+python-dotenv==1.0.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 uritemplate==4.1.1
 urllib3==2.0.7
-python-dotenv
